Update Java version to newer Java 10/11 collection usages.